--- a/AboutStudy/源码调试.md
+++ b/AboutStudy/源码调试.md
@@ -12,7 +12,7 @@
 就像开发app, 写的代码要与运行的应用程序对应上一样. 调试的行号才能对上.
 
 ## 第二步 准备环境
-使用image创建虚拟机
+使用image创建虚拟机，这就好比手机上装了源码打包的App。
 
 ### 具体步骤
    - 创建模拟器
@@ -26,6 +26,7 @@
    在较旧版本的Android studio中,可以支持直接修改源码路径, 新版的入口取消,
    so 修改android sdk路径下的源码为
    在`{yourSdkPath}\sources\android-29` 中,直接替换android-29整个文件夹(建议原版重命名保留)
+   
 
 
 为了避免混淆,建议在{yourSdkPath}下建立一个readMe文件,内容描述二者路径
@@ -35,6 +36,8 @@ C:\Users\diejuanjuan\AppData\Local\Android\Sdk\sources\android-29-system
 C:\Users\diejuanjuan\AppData\Local\Android\Sdk\sources\android-29
 是服务端下载的源码,与之对应的image是:  
 C:\Users\diejuanjuan\AppData\Local\Android\Sdk\system-images\android-29\default\x86_64
+
+`!!! 非常重要的一个步骤 !!! `
 
 接着修改待运行工程中的 compileSdkVersion 与你的源码版本一致. 
 以debug模式运行功能,并在setOnClickListener方法上打断点... 此处贴图
@@ -56,7 +59,7 @@ emulator -avd Pixel_3_API_S
 2. sdk Tools下
      升级了Android Emulator
      升级了Intel x86 Emulator Accelerator 
-     在这个过程中, 发现Emulator在Android11的变化
+     在这个过程中， 发现Emulator在Android11的变化
      
 x86 即 x86_32  如今android 模拟器 x86模拟器已经支持arm 所以仅在arm abi架构下的程序也可在x86下运行 'https://android-developers.googleblog.com/2020/03/run-arm-apps-on-android-emulator.html'
 
