update  源码调试文件

--- a/AboutStudy/源码调试.md
+++ b/AboutStudy/源码调试.md
@@ -6,8 +6,8 @@
 
 ## 第一步 准备材料
 源码调试需要两份材料
-1. ①源码本身 `sdk-repo-linux-sources-eng.zhch.zip`
-2. ②image系统  <由①源码编译> `sdk-repo-linux-system-images-eng.zhch.zip`
+1. ①源码本身 `source.zip(修改之前笔记是：sdk-repo-linux-sources-eng.zhch.zip)`
+2. ②image系统  <由①源码编译> `x86_64.tar.gz (修改之前笔记是：sdk-repo-linux-system-images-eng.zhch.zip）`
 虚拟机的系统与源码对应上了，可以实现正确的调试。
 就像开发app, 写的代码要与运行的应用程序对应上一样. 调试的行号才能对上.
 
@@ -16,8 +16,8 @@
 
 ### 具体步骤
    - 创建模拟器
-   `{yoursdkPath}\system-images` 中创建`android-29`文件夹，在`android-29`中创建`default`文件夹；
-   将`sdk-repo-linux-system-images-eng.zhch.zip` 解压，得到一个`x86_64`文件夹，将整个`x86_64`文件夹直接复制到刚创建的`default`文件夹中
+   `{yoursdkPath}\sources` 中创建`android-29`文件夹，在`android-29`中创建`default`文件夹；
+   将`x86_64.tar.gz(sdk-repo-linux-system-images-eng.zhch.zip）` 解压，得到一个`x86_64`文件夹，将整个`x86_64`文件夹直接复制到刚创建的`default`文件夹中
    在AndroidStudio中点击`AVD Manager`按钮打开`Your Virtual Devices`弹窗，点击弹窗上的`Create Virtual Device`按钮，在后续的`System Image`面板中选择`x86 images`标签
    此时能看到我们刚移动到`android-29`文件夹中的image了，此处具体为`Q 29 x86_64 Android 10.0`，选择它，然后按正常流程创建模拟器即可。
    此时启动模拟器, 模拟器系统为上述image.
@@ -71,7 +71,7 @@ x86 即 x86_32  如今android 模拟器 x86模拟器已经支持arm 所以仅在
 密码 sogou123
 直接在命令行输入：ssh gggin@10.150.84.96
 登录服务器查看，因为这是公司服务器，注意使用完后直接退出就好，千万不要关机
-cd  /search/odin/lwh/android/android_10_0_0_r47  这是一个绝对目录
+cd  /search/odin/lwh/android/android_10_0_0_r47  这是一个绝对目录 这是其他人的目录
 
 
 不要修改 /search/odin/lwh/android/android_10_0_0_r47 这个目录下的代码，如果需要自己编译安卓源码，建议拷贝 /search/odin/lwh/android/android_10_0_0_r47_original（这个目录中的文件也不要修改） 
@@ -83,7 +83,8 @@ cd  /search/odin/lwh/android/android_10_0_0_r47  这是一个绝对目录
  /search/odin/gggin/shmily
 
 源码位置   
-out/host/linux-x86/sdk/sdk_x86_64/android-sdk_eng.lwh_linux-x86
+/search/odin/gggin/shmily/android_10_0_0_r47_original/out/host/linux-x86/sdk/sdk_x86_64
+out/host/linux-x86/sdk/sdk_x86_64/android-sdk_eng.gggin_linux-x86.zip 此处是源码
 尝试用源码编一个image 并记录流程
 
 先执行命令  make clobber  清空输出目录
@@ -102,7 +103,7 @@ python my_mk_sources_zip.py -z source.properties android-29-sources.zip .
 
 下载源码到本地
 D:\AboutWork\AAA_ClassLoader>scp gggin@10.150.84.96:/search/odin/gggin/shmily/android_10_0_0_r47_original/out/host/linux-x86/sdk/sdk_x86_64/android-sdk_eng.gggin_linux-x86.zip X.zip
-gggin@10.150.84.96's password:
+gggin@10.150.84.96's password:sogou123
 android-sdk_eng.gggin_linux-x86.zip
 
 关于源码内容
