源码调试笔记更新+Hippy笔记

--- a/AboutStudy/源码调试.md
+++ b/AboutStudy/源码调试.md
@@ -16,7 +16,8 @@
 
 ### 具体步骤
    - 创建模拟器
-   `{yoursdkPath}\sources` 中创建`android-29`文件夹，在`android-29`中创建`default`文件夹；
+   `{yoursdkPath}\system-images` 中创建`android-29`文件夹，在`android-29`中创建`default`文件夹；
+   (`system-images`是包含当前已下载的Android系统集合的文件夹，如果不存在可以创建一个，或者下载一个。)
    将`x86_64.tar.gz(sdk-repo-linux-system-images-eng.zhch.zip）` 解压，得到一个`x86_64`文件夹，将整个`x86_64`文件夹直接复制到刚创建的`default`文件夹中
    在AndroidStudio中点击`AVD Manager`按钮打开`Your Virtual Devices`弹窗，点击弹窗上的`Create Virtual Device`按钮，在后续的`System Image`面板中选择`x86 images`标签
    此时能看到我们刚移动到`android-29`文件夹中的image了，此处具体为`Q 29 x86_64 Android 10.0`，选择它，然后按正常流程创建模拟器即可。
