更新源码调试笔记

--- a/AboutStudy/源码调试.md
+++ b/AboutStudy/源码调试.md
@@ -10,10 +10,12 @@
 2. ②image系统  <由①源码编译> `x86_64.tar.gz (修改之前笔记是：sdk-repo-linux-system-images-eng.zhch.zip）`
 虚拟机的系统与源码对应上了，可以实现正确的调试。
 就像开发app, 写的代码要与运行的应用程序对应上一样. 调试的行号才能对上.
-源码与image系统的配置分别在
+
+### 源码与image系统的配置分别在
 `{yourSdkPath}\sources\android-29`
 `{yoursdkPath}\system-images`
 注意版本对应
+
 
 ## 第二步 准备环境
 使用image创建虚拟机，这就好比手机上装了源码打包的App。
