--- a/AboutStudy/源码调试.md
+++ b/AboutStudy/源码调试.md
@@ -90,8 +90,10 @@ cd  /search/odin/lwh/android/android_10_0_0_r47  这是一个绝对目录 这是
  /search/odin/gggin/shmily
 
 源码位置   
-/search/odin/gggin/shmily/android_10_0_0_r47_original/out/host/linux-x86/sdk/sdk_x86_64
-out/host/linux-x86/sdk/sdk_x86_64/android-sdk_eng.gggin_linux-x86.zip 此处是源码
+/search/odin/gggin/shmily/android_10_0_0_r47_original/out/host/linux-x86/sdk/sdk_x86_64/android-sdk_eng.gggin_linux-x86.zip 
+此处是源码
+
+
 尝试用源码编一个image 并记录流程
 
 先执行命令  make clobber  清空输出目录
