--- a/AboutStudy/源码调试.md
+++ b/AboutStudy/源码调试.md
@@ -110,6 +110,14 @@ python my_mk_sources_zip.py -z source.properties android-29-sources.zip .
 源码根目录下执行此命令生成打包源码  android-29-sources.zip
 
 
+拷贝命令
+cp -r file1 file2
+eg： 
+cp -r android_11_0_0_r38 /search/odin/gggin/shmily
+
+rm -rf命令 删除文件夹 
+rm -rf filedirName
+
 下载源码到本地
 D:\AboutWork\AAA_ClassLoader>scp gggin@10.150.84.96:/search/odin/gggin/shmily/android_10_0_0_r47_original/out/host/linux-x86/sdk/sdk_x86_64/android-sdk_eng.gggin_linux-x86.zip X.zip
 gggin@10.150.84.96's password:sogou123
