--- a/准备/准备.md
+++ b/准备/准备.md
@@ -1,6 +1,18 @@
 
 ### 基础
+启动耗时优化 
+
 1. ui优化： 提升绘图效率 减少卡顿
+
+Choreographer的详细介绍
+https://juejin.cn/user/993614240692190/posts
+
+ui卡顿的监控 
+方案1 利用UI线程的Looper的Printer匹配（Looper.java源码可见）
+方案2 Choreographer的sync的信号量的监控 
+https://www.jianshu.com/p/fdb0c48f342b
+
+热修复技术的了解对比
 
 2. 内存优化： 内存泄露 内存溢出
 
@@ -36,6 +48,12 @@
 ### 插件化
 框架用过哪些  了解过哪些 哪几家  方案与优缺点
 kotlin 里面 泛型 携程 多线程 
+
+### 依赖反转的处理
+简单点的可以直接使用反射，但其实反射也是有依赖的，依赖被反射对象的类路径、方法签名等
+接口下沉
+aop思想 编译时通过编译字节码实现事件接口向总线的注册
+怎么做 
 
 ### 八股文
 1. view的绘制原理
