[type]面试速成总结
body, optional fields

[TAPD]

--- a/准备/启动耗时.md
+++ b/准备/启动耗时.md
@@ -27,5 +27,15 @@
     在上传数据到服务器时建议根据用户ID的尾号来抽样上报。
     在项目中核心基类的关键回调函数和核心方法中加入打点。
 
+    启动过程分析
+    1.点击
+    2.预览 //
+    3.闪屏
+    4.主页 // 闪屏广告 热修复 插件化
+    5.操作 //
 
+    从1-5 才是用户的真实体验
+
+    启动期间仅加载必须的业务与功能。必须的！
+    内存优化 LPDDR 低功耗双倍数据RAM
 
