--- a/准备/准备列表.md
+++ b/准备/准备列表.md
@@ -7,37 +7,41 @@
 3. anr的原因 常见解决方案  --- 见SC_ANR日志 000
 
 
-2. 内存优化： 内存泄露 内存溢出  做过 ----- 见SC_内存优化
+2. 内存优化： 内存泄露 内存溢出  做过 ----- 见SC_内存优化 000
 //TODO 最后看下简历里的监控 LeakCanary的原理
 
 
 4. native崩溃栈的查看与处理    -----  333 没有这个
 
 5. 多线程，线程池，数据同步，锁，锁的性能与特点 使用场景与优缺点  
-   asyncTask使用场景与优缺点   handlerThread原理 -----  222
+   asyncTask使用场景与优缺点   handlerThread原理 
+   ### -----  000 
 
 
 ### 网络
 1. http协议 1.0 2.0 3.0 差异与区别  
 
 2. https单向认证与双向认证  ssl工作过程 （ssl1.3变化比较大，工作过程与算法变化比较大） 
-### ----- 444
+### ----- 000 
 
 3. http状态码：200 206 205 300 404 499 500 502 504 505 ok SC_http状态码 000
 
-### 设计 知道了解 会用 ----- 555
+### 设计 知道了解 会用 ----- 000
 1. 设计模式 十几种常用知道 知道会用
 2. 设计原则，面向对象的特性。
 
-### 组件化 ----- 666
+### 组件化 ----- 000
 组件方案怎么做
+
 
 ### 插件化 ----- 777 
 框架用过哪些  了解过哪些 哪几家  方案与优缺点
 
+
 ### --- 888 
 kotlin 泛型 携程 多线程 区别
-Kotlin中所有的内部类都是默认静态的，也就都是静态内部类。 在Kotlin中，匿名内部类如果没有使用到外部类的对象，是不会持有外部类的对象引用的，此时的匿名内部类其实就是个静态匿名内部类，也就不会发生内存泄漏。
+委托 扩展 用起来很方便 
+Kotlin中所有的内部类都是默认静态的，也就都是静态内部类。 在Kotlin中，匿名内部类如果没有使用到外部类的对象，是不会持有外部类的对象引用的，此时的匿名内部类其实就是个静态匿名内部类，也就不会发生内存泄漏。但是引用外部类的对象后，那就不同了。
 
 ### --- 加解密安全策略 ---999 
 7. 加解密，安全策略相关 
@@ -70,3 +74,6 @@ aop思想 编译时通过编译字节码实现事件接口向总线的注册
 UI优化 完成
 
 内存优化： 内存泄露 内存溢出 怎么处理
+
+
+LeakCanary 的原理
