--- a/准备/算法练习/二叉树的中序遍历.md
+++ b/准备/算法练习/二叉树的中序遍历.md
@@ -1,5 +1,33 @@
-- 等丰
+`二叉树的递归遍历`
+前序遍历：打印 - 左 - 右
+中序遍历：左 - 打印 - 右
+后序遍历：左 - 右 - 打印
 
+题目要求的是中序遍历，即左-打印-右这种顺序遍历树，递归函数实现
 
+- 终止条件：当前节点为空时
+函数内：递归的调用左节点，打印当前节点，再递归调用右节点
+- 时间复杂度：O(n)
+- 空间复杂度：O(h)，h 是树的高度
 
-测试提交
+代码实现：
+```
+class Solution {
+	public List<Integer> inorderTraversal(TreeNode root) {
+		List<Integer> res = new ArrayList<Integer>();
+		dfs(res,root);
+		return res;
+	}
+	
+	void dfs(List<Integer> res, TreeNode root) {
+		if(root==null) {
+			return;
+		}
+		//按照 左-打印-右的方式遍历
+		dfs(res,root.left);
+		res.add(root.val);
+		dfs(res,root.right);
+	}
+}
+
+```
