--- a/准备/就业思考.md
+++ b/准备/就业思考.md
@@ -1,4 +1,4 @@
-1. 工作  个人竞争力是否能够提升 满足
+1. 工作  个人竞争力是否能够提升 依靠个人的能力
 
 2. 生活 
     2.1 压力                
@@ -6,10 +6,20 @@
     2.3 时间                
 
 3. 钱
-
+   可
 4. 工作项未来发展
+   公司寿命说不准，现状困难，小公司破产，大公司裁员。
 
+5. 现状
+   gap时间不可以过长，是否能找到更好的，是否能竞争过他人，不具备信心。
 
+1. 工作时长 
+2. 工作压力，协作
+3. 可以工作多久，公司寿命
+4. 薪水
+5. 距离
+
+考虑列表
 
 瓜子 >  滴滴 >  汽车之家(边缘化)   ||   搜狐   微博  网易
 
