--- a/准备/面试题汇总.md
+++ b/准备/面试题汇总.md
@@ -58,5 +58,40 @@
 - 这里需要准备个大活，原理等需要很清楚，面试官会根据这些提问
 
 
+针对简历本身：
+ 启动优化怎么做 有哪些方案？
+
+ 组件化 
+ spi方案?  总线方案？ 
+ autoService 
+
+ 业务组件
+ 路由是怎么做的？
+
+ 启动优化  是怎么做的   看ddd
+	进程的合并?
+	AMS插桩慢方法
+
+组件化方案
+
+sp有什么问题
+mmkv解决了哪些问题  多进程 快速 
+
+二叉树逐层Z型遍历
+其他题目：
+ANR OOM 
+组件化方案
+死锁
+一个线程对应一个looper机制实现
+ANR的监控怎么做？ Message Printer 
+
+
+
+
+
+
+
+
+
 
 
