--- a/准备/就业思考.md
+++ b/准备/就业思考.md
@@ -18,12 +18,25 @@
 3. 可以工作多久，公司寿命
 4. 薪水
 5. 距离
+目前的经济压力，个人条件，市场形式
+若无经济压力
+但从个人条件与市场形式来看，有一份工作是明智，短期内，市场不会变好，只会变差。
+在2-3月后再去找，剩余的坑位质量可能更差，随着gap时间过长，我压力过大，就会心态崩溃，做出错误的选择，或者情绪波及家人。
 
-考虑列表
+核心竞争力的提升
+1. 时间
+2. 个人努力
+
+设计模式
+算法
+
+> 技术深度
+> 技术广度
+
+
+`考虑列表`
 
 瓜子 >  滴滴 >  汽车之家(边缘化)   ||   搜狐   微博  网易
-
-
 
 
 有坑位的
