--- a/准备/算法练习/模式识别.md
+++ b/准备/算法练习/模式识别.md
@@ -2,4 +2,38 @@
 算法模式识别
 有覆盖位置和可观测位置  考虑使用快慢指针的方式
 
+[二分法]
 1. 由于mid向下取整  target取left
+
+[哑指针]
+链表问题，合并引入哑指针
+
+class Solution {
+    public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+        // 使用带头结点的链表解决问题
+        // 待输出链表的头部
+        ListNode head = new ListNode();
+
+        // 待输出链表的 last 结点
+        ListNode last = head;
+        while(l1 != null && l2 != null) {
+            if(l1.val > l2.val) {
+                last.next = l2;
+                l2 = l2.next;
+            }else{
+                last.next = l1;
+                l1 = l1.next;
+            }
+            last = last.next;
+        }
+
+        // l1 或 l2 可能还有剩余结点没有合并， 
+        // 由于从上面的 while 循环中退出， 那么链表 l1 和 l2 至少有一个已经遍历结束
+        if(l1 != null) last.next = l1;
+        if(l2 != null) last.next = l2;
+
+        return head.next;
+
+    }
+}
+
