记录工作中遇到的问题

--- a/AboutStudy/项目理解.md
+++ b/AboutStudy/项目理解.md
@@ -1,9 +1,16 @@
 - EventViewModel是全局的通知，所需监听都可收到
 
 ### Viewmodel与ViewDataBinding的关联
-1. 通过xml的 <data> <variable> 下的指定对应的ViewModel
+1. 通过xml的 <data> <variable> 下的声明对应的ViewModel与Click
 2. 框架设计：xml会动态生成的ViewDataBinding
 3. 在activity继承类声明指定的ViewModel与ViewDataBinding
+4. 最重要的绑定步骤：
+    mDatabind.viewmodel = mViewModel  
+    mDatabind.click=ProxyClick()      
+    而这里mDatabind的属性viewModel与click都是上文xml里声明的两个变量
+
+View与ViewModel的绑定  其中xml扮演了View的角色
+
 
 ### 以恒生活appLoginActivity为例
 >1. 在activity_login.xml中声明<data> <variable>标签并指定viewmodel为LoginViewModel，需要bind的地方通过bind指定 
