1. 组件化问题总结

--- a/AboutStudy/学习了什么.md
+++ b/AboutStudy/学习了什么.md
@@ -3,4 +3,22 @@
 2. 高阶函数lamda表达式参数的使用
 
 
-无法生成databing的原因 一般是资源错误，快去查看xml文件的问题
+1、无法生成databing的原因 一般是资源错误，快去查看xml文件的问题
+2、看xml文件的格式，是否包含标签 layout  data 
+示例如下
+```
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+
+    <data>
+
+    </data>
+
+</layout>
+```
+3、是否在对应的build.gradle文件中包含
+    buildFeatures {
+        dataBinding = true
+    }
+ 123缺一不可todo check 3
