--- a/AboutStudy/项目理解/打包流程.md
+++ b/AboutStudy/项目理解/打包流程.md
@@ -12,6 +12,7 @@ java -jar walle-cli-all.jar batch -f channel(渠道文件不带后缀名) xxx.ap
 4. java -jar CheckAndroidV2Signature.jar  xxx.apk 可以校验签名是否正确
 正确会输出 {"ret":0,"msg":"ok","isV2":true,"isV2OK":true}
 
+5. keytool -list -printcert -jarfile xxx.apk  查看签名
 
 
 import os
