删除无用的文件

--- a/AboutStudy/项目理解/打包流程.md
+++ b/AboutStudy/项目理解/打包流程.md
@@ -3,7 +3,7 @@
 	通过命令打包 gradlew assembleRelease  并取\product\release下的apk 
 2. 360加固并签名    
     将apk放在这个目录下：D:\工具\360jiagubao_windows_64\jiagu
-    打开360加固保，应用加固->添加应用，360加固保会完成加固并签名这个过程，这样你会得到一个加固且签名的包，它的路径在 D:\工具\360jiagubao_windows_64\jiagu\output\diejuanjuan220627@credithc.com
+    打开360加固保，应用加固->添加应用，360加固保会完成加固并签名这个过程，这样你会得到一个加固且签名的包，它的路径在 D:\工具\360jiagubao_windows_64\jiagu\output\账号名
 
 3. 拿到这个加固且签名的包去打渠道包，到达这个目录的下层目录lib
 将包放到这个目录  在目录下打开命令行，执行命令
