--- a/AboutWork/内存泄漏问题修复.md
+++ b/AboutWork/内存泄漏问题修复.md
@@ -1,5 +1,5 @@
 ### 背景
-秒杀倒计时效果，使用CountDownTimer，CountDownTimer对外的API 
+倒计时效果，使用CountDownTimer，CountDownTimer对外的API 
 ```
 override fun onTick(millisUntilFinished: Long)
 override fun onFinish()
